--- a/Scripts/3.1_ANXIETY_SEX.Rmd
+++ b/Scripts/3.1_ANXIETY_SEX.Rmd
@@ -25,6 +25,11 @@ Anxiety_Control_Male <- subset(Anxiety_Control, Anxiety_Control$Sex == "male")
 Anxiety_Control_Female <- subset(Anxiety_Control, Anxiety_Control$Sex == "female")
 Anxiety_Treatment_Male <- subset(Anxiety_Treatment, Anxiety_Treatment$Sex == "male")
 Anxiety_Treatment_Female <- subset(Anxiety_Treatment, Anxiety_Treatment$Sex == "female")
+Anxiety_Maternal_Male <- subset(Anxiety_Maternal, Anxiety_Maternal$Sex == "male")
+Anxiety_Maternal_Female <- subset(Anxiety_Maternal, Anxiety_Maternal$Sex == "female")
+Anxiety_Paternal_Male <- subset(Anxiety_Paternal, Anxiety_Paternal$Sex == "male")
+Anxiety_Paternal_Female <- subset(Anxiety_Paternal, Anxiety_Paternal$Sex == "female")
+
 ```
 
 ### MAIN ANALYSIS FOR ALL BEHAVIORAL PARAMETERS BY SEX AND TANK
@@ -36,10 +41,6 @@ THESE STEPS ARE REPEATED FOR ALL BEHAVIORAL PARAMETERS, REFER TO THE FIRST BEHAV
 
 ### Total distance travelled
 ```{r}
-#Checking normality assumption
-Model_Tot_Dist_sex <- lmer(tot_dist ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_Tot_Dist)
-hist(residuals(Model_Tot_Dist_sex))
 
 #Repeatability analysis males
 rpt_tot_dist(Anxiety_Control_Male) -> Control_Tot_Dist_Male 
@@ -53,43 +54,24 @@ Control_Tot_Dist_Female
 rpt_tot_dist(Anxiety_Treatment_Female) -> Treatment_Tot_Dist_Female
 Treatment_Tot_Dist_Female
 
+#Repeatability analysis males
+rpt_tot_dist(Anxiety_Maternal_Male) -> Maternal_Tot_Dist_Male 
+Maternal_Tot_Dist_Male
+rpt_tot_dist(Anxiety_Paternal_Male) -> Paternal_Tot_Dist_Male 
+Paternal_Tot_Dist_Male
+
+#Repeatability analysis females
+rpt_tot_dist(Anxiety_Maternal_Female) -> Maternal_Tot_Dist_Female 
+Maternal_Tot_Dist_Female
+rpt_tot_dist(Anxiety_Paternal_Female) -> Paternal_Tot_Dist_Female
+Paternal_Tot_Dist_Female
 
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_Tot_Dist_Female_boot<-unlist(Control_Tot_Dist_Female$R_boot) #unlisting boots from repeatability analysis
-Control_Tot_Dist_Male_boot<-unlist(Control_Tot_Dist_Male$R_boot)
-
-Diff_boot_Tot_Dist_Control <- Control_Tot_Dist_Female_boot - Control_Tot_Dist_Male_boot #getting difference from boots
-
-
-q_tot_control <- quantile(Diff_boot_Tot_Dist_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_tot_Control <- mean(Diff_boot_Tot_Dist_Control) #Obtaining mean
-
-mean_tot_Control
-q_tot_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_Tot_Dist_Female_boot<-unlist(Treatment_Tot_Dist_Female$R_boot)
-Treatment_Tot_Dist_Male_boot<-unlist(Treatment_Tot_Dist_Male$R_boot)
-
-Diff_boot_Tot_Dist_Treatment <- Treatment_Tot_Dist_Male_boot - Treatment_Tot_Dist_Female_boot
-
-q_tot_Treatment <- quantile(Diff_boot_Tot_Dist_Treatment, c(0.025, 0.975)) 
-mean_tot_Treatment <- mean(Diff_boot_Tot_Dist_Treatment)
-
-mean_tot_Treatment
-q_tot_Treatment
 ```
 
 
 ### Time spent in low zone
 ```{r}
-#Checking normality assumption
-Model_low_dur_sex <- lmer(low_dur ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_low_dur)
-hist(residuals(Model_low_dur_sex))
 
 #Repeatability analysis males
 rpt_low_dur(Anxiety_Control_Male) -> Control_low_dur_Male 
@@ -103,42 +85,22 @@ Control_low_dur_Female
 rpt_low_dur(Anxiety_Treatment_Female) -> Treatment_low_dur_Female
 Treatment_low_dur_Female
 
+#Repeatability analysis males
+rpt_low_dur(Anxiety_Maternal_Male) -> Maternal_low_dur_Male 
+Maternal_low_dur_Male
+rpt_low_dur(Anxiety_Paternal_Male) -> Paternal_low_dur_Male 
+Paternal_low_dur_Male
 
+#Repeatability analysis females
+rpt_low_dur(Anxiety_Maternal_Female) -> Maternal_low_dur_Female 
+Maternal_low_dur_Female
+rpt_low_dur(Anxiety_Paternal_Female) -> Paternal_low_dur_Female
+Paternal_low_dur_Female
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_low_dur_Female_boot<-unlist(Control_low_dur_Female$R_boot) #unlisting boots from repeatability analysis
-Control_low_dur_Male_boot<-unlist(Control_low_dur_Male$R_boot)
-
-Diff_boot_low_dur_Control <- Control_low_dur_Female_boot - Control_low_dur_Male_boot #getting difference from boots
-
-
-q_low_dur_control <- quantile(Diff_boot_low_dur_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_low_dur_Control <- mean(Diff_boot_low_dur_Control) #Obtaining mean
-
-mean_low_dur_Control
-q_low_dur_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_low_dur_Female_boot<-unlist(Treatment_low_dur_Female$R_boot)
-Treatment_low_dur_Male_boot<-unlist(Treatment_low_dur_Male$R_boot)
-
-Diff_boot_low_dur_Treatment <- Treatment_low_dur_Female_boot - Treatment_low_dur_Male_boot
-
-q_low_dur_Treatment <- quantile(Diff_boot_low_dur_Treatment, c(0.025, 0.975)) 
-mean_low_dur_Treatment <- mean(Diff_boot_low_dur_Treatment)
-
-mean_low_dur_Treatment
-q_low_dur_Treatment
 ```
 
 ### Time spent in mid zone
 ```{r}
-#Checking normality assumption
-Model_mid_dur_sex <- lmer(mid_dur ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_mid_dur)
-hist(residuals(Model_mid_dur_sex))
 
 #Repeatability analysis males
 rpt_mid_dur(Anxiety_Control_Male) -> Control_mid_dur_Male 
@@ -152,42 +114,23 @@ Control_mid_dur_Female
 rpt_mid_dur(Anxiety_Treatment_Female) -> Treatment_mid_dur_Female
 Treatment_mid_dur_Female
 
+#Repeatability analysis males
+rpt_mid_dur(Anxiety_Maternal_Male) -> Maternal_mid_dur_Male 
+Maternal_mid_dur_Male
+rpt_mid_dur(Anxiety_Paternal_Male) -> Paternal_mid_dur_Male 
+Paternal_mid_dur_Male
 
+#Repeatability analysis females
+rpt_mid_dur(Anxiety_Maternal_Female) -> Maternal_mid_dur_Female 
+Maternal_mid_dur_Female
+rpt_mid_dur(Anxiety_Paternal_Female) -> Paternal_mid_dur_Female
+Paternal_mid_dur_Female
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_mid_dur_Female_boot<-unlist(Control_mid_dur_Female$R_boot) #unlisting boots from repeatability analysis
-Control_mid_dur_Male_boot<-unlist(Control_mid_dur_Male$R_boot)
-
-Diff_boot_mid_dur_Control <- Control_mid_dur_Female_boot - Control_mid_dur_Male_boot #getting difference from boots
-
-
-q_mid_dur_control <- quantile(Diff_boot_mid_dur_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_mid_dur_control <- mean(Diff_boot_mid_dur_Control) #Obtaining mean
-
-mean_mid_dur_control
-q_mid_dur_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_mid_dur_Female_boot<-unlist(Treatment_mid_dur_Female$R_boot)
-Treatment_mid_dur_Male_boot<-unlist(Treatment_mid_dur_Male$R_boot)
-
-Diff_boot_mid_dur_Treatment <- Treatment_mid_dur_Female_boot - Treatment_mid_dur_Male_boot
-
-q_mid_dur_Treatment <- quantile(Diff_boot_mid_dur_Treatment, c(0.025, 0.975)) 
-mean_mid_dur_Treatment <- mean(Diff_boot_mid_dur_Treatment)
-
-mean_mid_dur_Treatment
-q_mid_dur_Treatment
 ```
+
 
 ### Time spent in high zone
 ```{r}
-#Checking normality assumption
-Model_high_dur_sex <- lmer(sqrt(high_dur) ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_high_dur)
-hist(residuals(Model_high_dur_sex))
 
 #Repeatability analysis males
 rpt_high_dur(Anxiety_Control_Male) -> Control_high_dur_Male 
@@ -201,43 +144,23 @@ Control_high_dur_Female
 rpt_high_dur(Anxiety_Treatment_Female) -> Treatment_high_dur_Female
 Treatment_high_dur_Female
 
+#Repeatability analysis males
+rpt_high_dur(Anxiety_Maternal_Male) -> Maternal_high_dur_Male 
+Maternal_high_dur_Male
+rpt_high_dur(Anxiety_Paternal_Male) -> Paternal_high_dur_Male 
+Paternal_high_dur_Male
 
+#Repeatability analysis females
+rpt_high_dur(Anxiety_Maternal_Female) -> Maternal_high_dur_Female 
+Maternal_high_dur_Female
+rpt_high_dur(Anxiety_Paternal_Female) -> Paternal_high_dur_Female
+Paternal_high_dur_Female
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_high_dur_Female_boot<-unlist(Control_high_dur_Female$R_boot) #unlisting boots from repeatability analysis
-Control_high_dur_Male_boot<-unlist(Control_high_dur_Male$R_boot)
-
-Diff_boot_high_dur_Control <- Control_high_dur_Male_boot - Control_high_dur_Female_boot #getting difference from boots
-
-
-q_high_dur_control <- quantile(Diff_boot_high_dur_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_high_dur_control <- mean(Diff_boot_high_dur_Control) #Obtaining mean
-
-mean_high_dur_control
-q_high_dur_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_high_dur_Female_boot<-unlist(Treatment_high_dur_Female$R_boot)
-Treatment_high_dur_Male_boot<-unlist(Treatment_high_dur_Male$R_boot)
-
-Diff_boot_high_dur_Treatment <- Treatment_high_dur_Female_boot - Treatment_high_dur_Male_boot
-
-q_high_dur_Treatment <- quantile(Diff_boot_high_dur_Treatment, c(0.025, 0.975)) 
-mean_high_dur_Treatment <- mean(Diff_boot_high_dur_Treatment)
-
-mean_high_dur_Treatment
-q_high_dur_Treatment
 ```
 
 
 ### Time spent freezing
 ```{r}
-#Checking normality assumption
-Model_freezing_dur_sex <- lmer(log(freezing_dur+1) ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_freezing_dur)
-hist(residuals(Model_freezing_dur_sex))
 
 #Repeatability analysis males
 rpt_freezing_dur(Anxiety_Control_Male) -> Control_freezing_dur_Male 
@@ -251,44 +174,23 @@ Control_freezing_dur_Female
 rpt_freezing_dur(Anxiety_Treatment_Female) -> Treatment_freezing_dur_Female
 Treatment_freezing_dur_Female
 
+#Repeatability analysis males
+rpt_freezing_dur(Anxiety_Maternal_Male) -> Maternal_freezing_dur_Male 
+Maternal_freezing_dur_Male
+rpt_freezing_dur(Anxiety_Paternal_Male) -> Paternal_freezing_dur_Male 
+Paternal_freezing_dur_Male
 
+#Repeatability analysis females
+rpt_freezing_dur(Anxiety_Maternal_Female) -> Maternal_freezing_dur_Female 
+Maternal_freezing_dur_Female
+rpt_freezing_dur(Anxiety_Paternal_Female) -> Paternal_freezing_dur_Female
+Paternal_freezing_dur_Female
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_freezing_dur_Female_boot<-unlist(Control_freezing_dur_Female$R_boot) #unlisting boots from repeatability analysis
-Control_freezing_dur_Male_boot<-unlist(Control_freezing_dur_Male$R_boot)
-
-Diff_boot_freezing_dur_Control <- Control_freezing_dur_Female_boot - Control_freezing_dur_Male_boot #getting difference from boots
-
-
-q_freezing_dur_control <- quantile(Diff_boot_freezing_dur_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_freezing_dur_control <- mean(Diff_boot_freezing_dur_Control) #Obtaining mean
-
-mean_freezing_dur_control
-q_freezing_dur_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_freezing_dur_Female_boot<-unlist(Treatment_freezing_dur_Female$R_boot)
-Treatment_freezing_dur_Male_boot<-unlist(Treatment_freezing_dur_Male$R_boot)
-
-Diff_boot_freezing_dur_Treatment <- Treatment_freezing_dur_Male_boot - Treatment_freezing_dur_Female_boot
-
-q_freezing_dur_Treatment <- quantile(Diff_boot_freezing_dur_Treatment, c(0.025, 0.975)) 
-mean_freezing_dur_Treatment <- mean(Diff_boot_freezing_dur_Treatment)
-
-mean_freezing_dur_Treatment
-q_freezing_dur_Treatment
 ```
 
 
 ### Latency to high
 ```{r}
-#Checking normality assumption
-Model_latency_high_sex <- lmer(latency_high ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_latency_high)
-hist(residuals(Model_latency_high_sex))
-
 #Repeatability analysis males
 rpt_latency(Anxiety_Control_Male) -> Control_latency_high_Male 
 Control_latency_high_Male
@@ -301,42 +203,22 @@ Control_latency_high_Female
 rpt_latency(Anxiety_Treatment_Female) -> Treatment_latency_high_Female
 Treatment_latency_high_Female
 
+#Repeatability analysis males
+rpt_latency(Anxiety_Maternal_Male) -> Maternal_latency_Male 
+Maternal_latency_Male
+rpt_latency(Anxiety_Paternal_Male) -> Paternal_latency_Male 
+Paternal_latency_Male
 
+#Repeatability analysis females
+rpt_latency(Anxiety_Maternal_Female) -> Maternal_latency_Female 
+Maternal_latency_Female
+rpt_latency(Anxiety_Paternal_Female) -> Paternal_latency_Female
+Paternal_latency_Female
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_latency_high_Female_boot<-unlist(Control_latency_high_Female$R_boot) #unlisting boots from repeatability analysis
-Control_latency_high_Male_boot<-unlist(Control_latency_high_Male$R_boot)
-
-Diff_boot_latency_high_Control <- Control_latency_high_Female_boot - Control_latency_high_Male_boot #getting difference from boots
-
-
-q_latency_high_control <- quantile(Diff_boot_latency_high_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_latency_high_control <- mean(Diff_boot_latency_high_Control) #Obtaining mean
-
-mean_latency_high_control
-q_latency_high_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_latency_high_Female_boot<-unlist(Treatment_latency_high_Female$R_boot)
-Treatment_latency_high_Male_boot<-unlist(Treatment_latency_high_Male$R_boot)
-
-Diff_boot_latency_high_Treatment <- Treatment_latency_high_Female_boot - Treatment_latency_high_Male_boot
-
-q_latency_high_Treatment <- quantile(Diff_boot_latency_high_Treatment, c(0.025, 0.975)) 
-mean_latency_high_Treatment <- mean(Diff_boot_latency_high_Treatment)
-
-mean_latency_high_Treatment
-q_latency_high_Treatment
 ```
 
 ### Entries to high zone
 ```{r}
-#Checking normality assumption
-Model_freq_high_sex <- lmer(sqrt(freq_high) ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
-tab_model(Model_freq_high)
-hist(residuals(Model_freq_high_sex))
 
 #Repeatability analysis males
 rpt_freq(Anxiety_Control_Male) -> Control_freq_high_Male 
@@ -350,33 +232,17 @@ Control_freq_high_Female
 rpt_freq(Anxiety_Treatment_Female) -> Treatment_freq_high_Female
 Treatment_freq_high_Female
 
+#Repeatability analysis males
+rpt_freq(Anxiety_Maternal_Male) -> Maternal_freq_Male 
+Maternal_freq_Male
+rpt_freq(Anxiety_Paternal_Male) -> Paternal_freq_Male 
+Paternal_freq_Male
 
+#Repeatability analysis females
+rpt_freq(Anxiety_Maternal_Female) -> Maternal_freq_Female 
+Maternal_freq_Female
+rpt_freq(Anxiety_Paternal_Female) -> Paternal_freq_Female
+Paternal_freq_Female
 
-#Contrast analysis to calculate differences between males and females in the control group
-
-Control_freq_high_Female_boot<-unlist(Control_freq_high_Female$R_boot) #unlisting boots from repeatability analysis
-Control_freq_high_Male_boot<-unlist(Control_freq_high_Male$R_boot)
-
-Diff_boot_freq_high_Control <- Control_freq_high_Female_boot - Control_freq_high_Male_boot #getting difference from boots
-
-
-q_freq_high_control <- quantile(Diff_boot_freq_high_Control, c(0.025, 0.975)) #calculating quantiles at 2.5% and 97.5% (will become 95% CI)
-mean_freq_high_control <- mean(Diff_boot_freq_high_Control) #Obtaining mean
-
-mean_freq_high_control
-q_freq_high_control
-
-#Contrast analysis to calculate differences between males and females in the treatment group
-
-Treatment_freq_high_Female_boot<-unlist(Treatment_freq_high_Female$R_boot)
-Treatment_freq_high_Male_boot<-unlist(Treatment_freq_high_Male$R_boot)
-
-Diff_boot_freq_high_Treatment <- Treatment_freq_high_Female_boot - Treatment_freq_high_Male_boot
-
-q_freq_high_Treatment <- quantile(Diff_boot_freq_high_Treatment, c(0.025, 0.975)) 
-mean_freq_high_Treatment <- mean(Diff_boot_freq_high_Treatment)
-
-mean_freq_high_Treatment
-q_freq_high_Treatment
 ```
 
