--- a/Scripts/3.0_ANXIETY.Rmd
+++ b/Scripts/3.0_ANXIETY.Rmd
@@ -1,13 +1,18 @@
 ---
-title: "Anxiety"
+title: "Anxiety 1"
 author: "Hamza"
-date: "11/02/2020"
+date: "25/11/2020"
 output: html_document
 ---
 
 ### Loading packages
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+knitr::opts_knit$set(
+    # This should allow Rmarkdown to locate the data
+    root.dir = rprojroot::find_rstudio_root_file()
+)
 
 #checks for installation and loads packages
 pacman::p_load(lmerTest,ggThemeAssist,rptR,lme4,readxl, tidyr, dplyr, magrittr, lubridate, stringr, purrr,
@@ -20,11 +25,10 @@ source("../Scripts/functions_repeatability.R")
 ```
 
 
-### Import Data
+### Import
 ```{r, include=FALSE}
-Anxiety_Joined <- read_xlsx("../Data/Anxiety/Anxiety_Data.xlsx")
+Anxiety_Joined <- read.csv("Data/Anxiety/Anxiety_Joined.csv")
 
-#Import new file updated with new params !!!!
 ```
 
 ### Examine Data
@@ -44,8 +48,11 @@ Anxiety_Joined$Tank <- as.factor(Anxiety_Joined$Tank)
 
 #Subsetting into control and treatment
 
-Anxiety_Control <- subset(Anxiety_Joined, Anxiety_Joined$Group == "Control") 
-Anxiety_Treatment <- subset(Anxiety_Joined, Anxiety_Joined$Group == "Treatment") 
+Anxiety_Control <- subset(Anxiety_Joined, Anxiety_Joined$Tank == "Within Control") 
+Anxiety_Treatment <- subset(Anxiety_Joined, Anxiety_Joined$Tank == "Within Treatment")
+Anxiety_Maternal <- subset(Anxiety_Joined, Anxiety_Joined$Tank == "Maternal") 
+Anxiety_Paternal <- subset(Anxiety_Joined, Anxiety_Joined$Tank == "Paternal") 
+
 ```
 
 
@@ -66,7 +73,7 @@ NEED TO EDIT COMMENTS !
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_Tot_Dist <- lmer(tot_dist ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined)
+Model_Tot_Dist <- lmer(tot_dist ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined)
 tab_model(Model_Tot_Dist)#mixed model 
 hist(residuals(Model_Tot_Dist)) #histogram of residuals to check for normal distribution (easiest way to check assumption of normality)
 
@@ -76,28 +83,16 @@ rpt_tot_dist(Anxiety_Control) -> Control_Tot_Dist
 Control_Tot_Dist
 rpt_tot_dist(Anxiety_Treatment) -> Treatment_Tot_Dist 
 Treatment_Tot_Dist
+rpt_tot_dist(Anxiety_Maternal) -> Maternal_Tot_Dist 
+Maternal_Tot_Dist
+rpt_tot_dist(Anxiety_Paternal) -> Paternal_Tot_Dist 
+Paternal_Tot_Dist
 
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_tot_dist(Anxiety_Control) -> within_between_tot_dist_control 
-within_between_tot_dist_control
-rpt_within_between_tot_dist(Anxiety_Treatment)-> within_between_tot_dist_treatment 
-within_between_tot_dist_treatment
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_tot_dist_boot <- unlist_rptr(Control_Tot_Dist) #unlisting from the short tanks
-Treatment_tot_dist_boot <- unlist_rptr(Treatment_Tot_Dist) #unlisting from the tall tanks
-Tot_dist_diff <- difference_boot(Control_tot_dist_boot,Treatment_tot_dist_boot) #calculating the difference
-q1 <- quantiles_diff_boot(Tot_dist_diff) #obtaining 95% CI
-m1 <- mean(Tot_dist_diff) #Obtaining mean
-
-q1
-m1
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_Tot_Dist1 <- lme(tot_dist ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_Tot_Dist1 <- lme(tot_dist ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_Tot_Dist1)
-Model_Tot_Dist2 <- lme(tot_dist ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_Tot_Dist2 <- lme(tot_dist ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_Tot_Dist2)
 anova(Model_Tot_Dist1, Model_Tot_Dist2) #calculating difference between two models to find difference in variance
 ```
@@ -108,36 +103,25 @@ anova(Model_Tot_Dist1, Model_Tot_Dist2) #calculating difference between two mode
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_low_dur <- lmer(low_dur ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_low_dur)) #histogram of residuals reveals a transformation is needed ?
+Model_low_dur <- lmer(low_dur ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
+tab_model(Model_low_dur)
+hist(residuals(Model_low_dur))
 
 #Calculating repeatabilities using custom made functions
 rpt_low_dur(Anxiety_Control) -> Control_low_dur 
 Control_low_dur 
 rpt_low_dur(Anxiety_Treatment) -> Treatment_low_dur 
 Treatment_low_dur
+rpt_low_dur(Anxiety_Maternal) -> Maternal_low_dur
+Maternal_low_dur
+rpt_low_dur(Anxiety_Paternal) -> Paternal_low_dur
+Paternal_low_dur
 
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_low_dur(Anxiety_Control) -> within_between_low_dur_control
-within_between_low_dur_control
-rpt_within_between_low_dur(Anxiety_Treatment)-> within_between_low_dur_treatment 
-within_between_low_dur_treatment
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_low_dur_boot <- unlist_rptr(Control_low_dur) #unlisting from the short tanks
-Treatment_low_dur_boot <- unlist_rptr(Treatment_low_dur) #unlisting from the tall tanks
-low_dur_diff <- difference_boot(Control_low_dur_boot,Treatment_low_dur_boot) #calculating the difference
-q2 <- quantiles_diff_boot(low_dur_diff) #obtaining 95% CI
-m2 <- mean(low_dur_diff) #Obtaining mean
-
-q2
-m2
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_low_dur1 <- lme(low_dur ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_low_dur1 <- lme(low_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_low_dur1)
-Model_low_dur2 <- lme(low_dur ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_low_dur2 <- lme(low_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_low_dur2)
 anova(Model_low_dur1, Model_low_dur2) #calculating difference between two models to find difference in variance
 ```
@@ -148,39 +132,25 @@ anova(Model_low_dur1, Model_low_dur2) #calculating difference between two models
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_mid_dur <- lmer(mid_dur ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_mid_dur)) #histogram of residuals - transformation ?
-
+Model_mid_dur <- lmer(mid_dur ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
+tab_model(Model_mid_dur)
+hist(residuals(Model_mid_dur))
 
 #Calculating repeatabilities using custom made functions
 rpt_mid_dur(Anxiety_Control) -> Control_mid_dur 
-Control_mid_dur
+Control_mid_dur 
 rpt_mid_dur(Anxiety_Treatment) -> Treatment_mid_dur 
 Treatment_mid_dur
+rpt_mid_dur(Anxiety_Maternal) -> Maternal_mid_dur
+Maternal_mid_dur
+rpt_mid_dur(Anxiety_Paternal) -> Paternal_mid_dur
+Paternal_mid_dur
 
-
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_mid_dur(Anxiety_Control) -> within_between_mid_dur_control
-within_between_mid_dur_control
-rpt_within_between_mid_dur(Anxiety_Treatment)-> within_between_mid_dur_treatment
-within_between_mid_dur_treatment
-
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_mid_dur_boot <- unlist_rptr(Control_mid_dur) #unlisting from the short tanks
-Treatment_mid_dur_boot <- unlist_rptr(Treatment_mid_dur) #unlisting from the tall tanks
-mid_dur_diff <- difference_boot(Control_mid_dur_boot,Treatment_mid_dur_boot) #calculating the difference
-q3 <- quantiles_diff_boot(mid_dur_diff) #obtaining 95% CI
-m3 <- mean(mid_dur_diff) #Obtaining mean
-
-q3
-m3
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_mid_dur1 <- lme(mid_dur ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_mid_dur1 <- lme(mid_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_mid_dur1)
-Model_mid_dur2 <- lme(mid_dur ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_mid_dur2 <- lme(mid_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_mid_dur2)
 anova(Model_mid_dur1, Model_mid_dur2) #calculating difference between two models to find difference in variance
 ```
@@ -191,40 +161,25 @@ anova(Model_mid_dur1, Model_mid_dur2) #calculating difference between two models
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_high_dur <- lmer(high_dur ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_high_dur)) #histogram of residuals reveals transformation required
-
-Model_high_dur0 <- lmer(log(high_dur+1) ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_high_dur0)) #better normal distribution
+Model_high_dur <- lmer(high_dur ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
+tab_model(Model_high_dur)
+hist(residuals(Model_high_dur))
 
 #Calculating repeatabilities using custom made functions
-rpt_high_dur2(Anxiety_Control) -> Control_high_dur 
-Control_high_dur
-rpt_high_dur2(Anxiety_Treatment) -> Treatment_high_dur 
+rpt_high_dur(Anxiety_Control) -> Control_high_dur 
+Control_high_dur 
+rpt_high_dur(Anxiety_Treatment) -> Treatment_high_dur 
 Treatment_high_dur
+rpt_high_dur(Anxiety_Maternal) -> Maternal_high_dur
+Maternal_high_dur
+rpt_high_dur(Anxiety_Paternal) -> Paternal_high_dur
+Paternal_high_dur
 
-
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_high_dur2(Anxiety_Control) -> within_between_high_dur_control 
-within_between_high_dur_control
-rpt_within_between_high_dur2(Anxiety_Treatment)-> within_between_high_dur_treatment 
-within_between_high_dur_treatment
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_high_dur_boot <- unlist_rptr(Control_high_dur) #unlisting from the short tanks
-Treatment_high_dur_boot <- unlist_rptr(Treatment_high_dur) #unlisting from the tall tanks
-high_dur_diff <- difference_boot(Control_high_dur_boot,Treatment_high_dur_boot) #calculating the difference
-q4 <- quantiles_diff_boot(high_dur_diff) #obtaining 95% CI
-m4 <- mean(high_dur_diff) #Obtaining mean
-
-q4
-m4
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_high_dur1 <- lme(high_dur ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_high_dur1 <- lme(high_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_high_dur1)
-Model_high_dur2 <- lme(high_dur ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_high_dur2 <- lme(high_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_high_dur2)
 anova(Model_high_dur1, Model_high_dur2) #calculating difference between two models to find difference in variance
 ```
@@ -234,42 +189,25 @@ anova(Model_high_dur1, Model_high_dur2) #calculating difference between two mode
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_freezing_dur <- lmer(freezing_dur ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_freezing_dur)) #histogram of residuals reveals a transformation is required
-
-Model_freezing_dur0 <- lmer(log(freezing_dur+1) ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_freezing_dur0))
-
+Model_freezing_dur <- lmer(freezing_dur ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
+tab_model(Model_freezing_dur)
+hist(residuals(Model_freezing_dur))
 
 #Calculating repeatabilities using custom made functions
 rpt_freezing_dur(Anxiety_Control) -> Control_freezing_dur 
-Control_freezing_dur
+Control_freezing_dur 
 rpt_freezing_dur(Anxiety_Treatment) -> Treatment_freezing_dur 
 Treatment_freezing_dur
+rpt_freezing_dur(Anxiety_Maternal) -> Maternal_freezing_dur
+Maternal_freezing_dur
+rpt_freezing_dur(Anxiety_Paternal) -> Paternal_freezing_dur
+Paternal_freezing_dur
 
-
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_freezing_dur(Anxiety_Control) -> within_between_freezing_dur_control 
-within_between_freezing_dur_control
-rpt_within_between_freezing_dur(Anxiety_Treatment)-> within_between_freezing_dur_treatment 
-within_between_freezing_dur_treatment
-
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_freezing_dur_boot <- unlist_rptr(Control_freezing_dur) #unlisting from the short tanks
-Treatment_freezing_dur_boot <- unlist_rptr(Treatment_freezing_dur) #unlisting from the tall tanks
-freezing_dur_diff <- difference_boot(Control_freezing_dur_boot,Treatment_freezing_dur_boot) #calculating the difference
-q5 <- quantiles_diff_boot(freezing_dur_diff) #obtaining 95% CI
-m5 <- mean(freezing_dur_diff) #Obtaining mean
-
-q5
-m5
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_freezing_dur1 <- lme(log(freezing_dur+1) ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_freezing_dur1 <- lme(freezing_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_freezing_dur1)
-Model_freezing_dur2 <- lme(log(freezing_dur+1) ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_freezing_dur2 <- lme(freezing_dur ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_freezing_dur2)
 anova(Model_freezing_dur1, Model_freezing_dur2) #calculating difference between two models to find difference in variance
 ```
@@ -279,39 +217,25 @@ anova(Model_freezing_dur1, Model_freezing_dur2) #calculating difference between 
 
 #Check Normality with mixed model and then histogram of residuals
 
-Model_latency_high <- lmer(latency_high ~ Group + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
-hist(residuals(Model_latency_high)) #histogram of residuals to check for normal distribution (easiest way to check assumption of normality)
-
+Model_latency_high <- lmer(latency_high ~ Tank + Sex + (1 | Fish_ID), data = Anxiety_Joined) #mixed model 
+tab_model(Model_latency_high)
+hist(residuals(Model_latency_high))
 
 #Calculating repeatabilities using custom made functions
-rpt_latency(Anxiety_Control) -> Control_latency_high
-Control_latency_high
-rpt_latency(Anxiety_Treatment) -> Treatment_latency_high 
+rpt_latency_high(Anxiety_Control) -> Control_latency_high 
+Control_latency_high 
+rpt_latency_high(Anxiety_Treatment) -> Treatment_latency_high 
 Treatment_latency_high
+rpt_latency_high(Anxiety_Maternal) -> Maternal_latency_high
+Maternal_latency_high
+rpt_latency_high(Anxiety_Paternal) -> Paternal_latency_high
+Paternal_latency_high
 
-
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_latency(Anxiety_Control) -> within_between_latency_high_control
-within_between_latency_high_control
-rpt_within_between_latency(Anxiety_Treatment)-> within_between_latency_high_treatment 
-within_between_latency_high_treatment
-
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_latency_high_boot <- unlist_rptr(Control_latency_high) #unlisting from the short tanks
-Treatment_latency_high_boot <- unlist_rptr(Treatment_latency_high) #unlisting from the tall tanks
-latency_high_diff <- difference_boot(Control_latency_high_boot,Treatment_latency_high_boot) #calculating the difference
-q6 <- quantiles_diff_boot(latency_high_diff) #obtaining 95% CI
-m6 <- mean(latency_high_diff) #Obtaining mean
-
-q6
-m6
 
 # Calculating difference in variance between short tanks and tall tanks 
-Model_latency_high1 <- lme(latency_high ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
+Model_latency_high1 <- lme(latency_high ~ Tank-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_latency_high1)
-Model_latency_high2 <- lme(latency_high ~ Group-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Group), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
+Model_latency_high2 <- lme(latency_high ~ Tank-1 + Sex, random = ~ 1| Fish_ID, weights = varIdent(form=~1|Tank), data = Anxiety_Joined, na.action=na.exclude) #mixed model with variance structure varIdent
 summary(Model_latency_high2)
 anova(Model_latency_high1, Model_latency_high2) #calculating difference between two models to find difference in variance
 ```
@@ -335,23 +259,6 @@ rpt_freq(Anxiety_Treatment) -> Treatment_freq_high
 Treatment_freq_high
 
 
-#Obtaining within-individual and between-individual variance for total distace 
-
-rpt_within_between_freq_high(Anxiety_Control) -> within_between_freq_high_control 
-within_between_freq_high_control
-rpt_within_between_freq_high(Anxiety_Treatment)-> within_between_freq_high_treatment 
-within_between_freq_high_treatment
-
-#Obtaining differences between repeatabilities using custom made functions
-Control_freq_high_boot <- unlist_rptr(Control_freq_high) #unlisting from the short tanks
-Treatment_freq_high_boot <- unlist_rptr(Treatment_freq_high) #unlisting from the tall tanks
-freq_high_diff <- difference_boot(Control_freq_high_boot,Treatment_freq_high_boot) #calculating the difference
-q7 <- quantiles_diff_boot(freq_high_diff) #obtaining 95% CI
-m7 <- mean(freq_high_diff) #Obtaining mean
-
-q7
-m7
-
 # Calculating difference in variance between short tanks and tall tanks 
 Model_freq_high1 <- lme(sqrt(freq_high) ~ Group-1 + Sex, random = ~ 1| Fish_ID, data = Anxiety_Joined, na.action=na.exclude) #mixed model without variance structure
 summary(Model_freq_high1)
@@ -359,3 +266,4 @@ Model_freq_high2 <- lme(sqrt(freq_high) ~ Group-1 + Sex, random = ~ 1| Fish_ID, 
 summary(Model_freq_high2)
 anova(Model_freq_high1, Model_freq_high2) #calculating difference between two models to find difference in variance
 ```
+
